# hdds_gen

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  build.rs  test_all_idl.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: HelloWorld.idl  advanced.idl  basic_usage.rs  big_arrays.idl  config.idl  flow.idl  fqn_ok.idl  sample.idl
examples/c-micro/: temperature.idl
examples/canonical/: Advanced.idl  AnnotationsMatrix.idl  ArraysAndSequences.idl  BitFeatures.idl  BitmaskOps.idl  BitsetEdgeCases.idl  ConstExpressions.idl  FixedDecimal.idl  HelloWorld.idl  MapsNested.idl  NumericAndLiterals.idl  StringsAndEscapes.idl  TypedefChains.idl  UnionCases.idl  UnionsAdvanced.idl  WideTypes.idl
examples/comments/: nested.idl
examples/interfaces/: Simple.idl
examples/interfaces_invalid/: DuplicateOperation.idl  DuplicateParam.idl  OnewayNonVoid.idl  OpAttrCollision.idl  RaisesUnknown.idl
examples/invalid/: AnnotationsConflict.idl  AutoIdSequential.idl  BitBoundExceed.idl  BitsetOverlap.idl  CustomAnnotationMissingParam.idl  DataRepresentationInvalid.idl  DataRepresentationOnMember.idl  EnumDuplicateNames.idl  (+6 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_idl.rs  fuzz_lexer.rs  fuzz_parser.rs
scripts/: extrem-audit-scan.sh  precommit.sh
src/: ast.rs  error.rs  lib.rs  test_extra.rs  token.rs  types.rs
tests/: codegen_coverage.rs  interop_c.rs  interop_c_ext.rs  pl_cdr2_generation.rs
(+121 files in other folders)
