# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright (c) 2025-2026 naskel.com

[package]
name = "hddsgen"
version = "1.0.8"
edition = "2021"
authors = ["naskel.com"]
description = "IDL 4.2 parser and code generator for HDDS"
license = "Apache-2.0 OR MIT"
repository = "https://git.hdds.io/hdds/hdds_gen.git"
readme = "README.md"
keywords = ["dds", "idl", "codegen", "xcdr2", "rtps"]
categories = ["parsing", "development-tools"]
exclude = ["fuzz/", "scripts/", "tools/", "examples/canonical/"]

[lib]
name = "hddsgen"
path = "src/lib.rs"

[[bin]]
name = "hddsgen"
path = "src/bin/hddsgen.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
encoding_rs = "0.8"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[features]
default = []
interfaces = []
